test tool version

--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -35,7 +35,7 @@ jobs:
           [ -z "$(git status -s -uno)" ] || echo "::set-output name=updated::true"
 
       - uses: actions/setup-python@v2
-        if: steps.is-updated.outputs.updated
+        # if: steps.is-updated.outputs.updated
         with:
           python-version: 3.9
           
@@ -48,7 +48,7 @@ jobs:
         run: cd flatpak-builder-tools/node && pipx install .
 
       - name: Generate node/cargo sources
-        if: steps.is-updated.outputs.updated
+        # if: steps.is-updated.outputs.updated
         run: |
           git submodule update --init
           ver=$(grep release in.cinny.Cinny.appdata.xml | grep -m1 -oP '(?<=version=.)[^"]+')
