--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -38,14 +38,15 @@ jobs:
         # if: steps.is-updated.outputs.updated
         with:
           python-version: 3.9
-          
-      - run: python3 -m pip install pipx
-      - run: python3 -m pip install pipreqs
-      - run: pipreqs flatpak-builder-tools
-      - run: python3 -m pip install -r flatpak-builder-tools/requirements.txt
 
-      - name: Install node generator
-        run: cd flatpak-builder-tools/node && pipx install .
+      - name: Install flatpak-node-generator
+        # if: steps.is-updated.outputs.updated
+        run: |
+          python3 -m pip install pipx
+          python3 -m pip install pipreqs
+          pipreqs flatpak-builder-tools
+          python3 -m pip install -r flatpak-builder-tools/requirements.txt
+          cd flatpak-builder-tools/node && pipx install .
 
       - name: Generate node/cargo sources
         # if: steps.is-updated.outputs.updated
