--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -57,15 +57,11 @@ jobs:
           python3 -m pip install aiohttp
           git submodule update --init
           ver=$(grep release in.cinny.Cinny.appdata.xml | grep -m1 -oP '(?<=version=.)[^"]+')
-          curl https://raw.githubusercontent.com/cinnyapp/cinny-desktop/v${ver}/src-tauri/Cargo.lock > Cargo.lock
-          curl https://raw.githubusercontent.com/cinnyapp/cinny-desktop/v${ver}/package-lock.json > cinny-desktop-package-lock.json
-          curl https://raw.githubusercontent.com/cinnyapp/cinny/v${ver}/package-lock.json > cinny-package-lock.json
-          flatpak-builder-tools/cargo/flatpak-cargo-generator.py -o cargo-sources.json Cargo.lock
-          flatpak-node-generator --no-requests-cache --no-xdg-layout -o npm-cinny-desktop-sources.json npm cinny-desktop-package-lock.json
-          flatpak-node-generator --no-requests-cache --no-xdg-layout -o npm-cinny-sources.json npm cinny-package-lock.json
-          rm Cargo.lock
-          rm cinny-desktop-package-lock.json
-          rm cinny-package-lock.json
+          git clone --recursive -b "v${ver}" --depth=1 https://github.com/cinnyapp/cinny-desktop.git
+          flatpak-builder-tools/cargo/flatpak-cargo-generator.py -o cargo-sources.json cinny-desktop/src-tauri/Cargo.lock
+          flatpak-node-generator --no-requests-cache --no-xdg-layout -o npm-cinny-desktop-sources.json npm cinny-desktop/package-lock.json
+          flatpak-node-generator --no-requests-cache --no-xdg-layout -o npm-cinny-sources.json npm cinny-desktop/cinny/package-lock.json
+          rm -rf cinny-desktop
           
       - name: reset
         run: |
