--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -27,6 +27,7 @@ jobs:
       - uses: actions/checkout@v3.0.2
         with:
           ref: ${{ matrix.branch }}
+          submodules: true
 
       - uses: docker://ghcr.io/flathub/flatpak-external-data-checker:latest
         with:
