--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -55,7 +55,7 @@ jobs:
       - name: generate node sources
         if: steps.is-updated.outputs.updated
         run: |
-          python3 -m pip install aiohttp
+          python3 -m pip install aiohttp toml
           git submodule update --init
           ver=$(grep release in.cinny.Cinny.appdata.xml | grep -m1 -oP '(?<=version=.)[^"]+')
           git clone --recursive -b "v${ver}" --depth=1 https://github.com/cinnyapp/cinny-desktop.git
