--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -16,7 +16,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        branch: ['master']
+        branch: ['simplify-build-ci-test']
             
     steps:
       - uses: actions/checkout@v3.0.2
